--- a/pages/login/login.less
+++ b/pages/login/login.less
@@ -13,31 +13,29 @@
   overflow: hidden;
 
   .logo-container{
-    position: relative;
-    top: 12vh;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 256rpx;
+
+    text-align: center;
 
     .logo {
       opacity: 1;
+      display: block;
       animation: 2s 0s alternate login-move-in both;
-      width: 100vw;
-      height: 90vw;
-    }
-    .homi {
-      animation: 2s 0.5s alternate login-move-in both;
-      position: relative;
-      bottom: 7.5vh;
-      height: 9vh;
-      width: 36.4vw;
-      text-align: center;
+
+      width: 50vw;
+
       margin-left: auto;
       margin-right: auto;
+    }
+    .homi {
+      display: block;
+      animation: 2s 0.5s alternate login-move-in both;
 
-      .homi-text{
-        color: white;
-        font-size: 13vw;
-      }
+      height: 5vh;
+
+      text-align: center;
+
+      margin: 64rpx auto;
     }
   }
 
