--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -115,7 +115,7 @@ van-dialog {
       align-items: center;
 
       .desc {
-        font-size: 36rpx;
+        font-size: 32rpx;
       }
 
       .btn {
@@ -140,7 +140,6 @@ van-dialog {
         padding: 20rpx 42rpx;
 
         font-size: 30rpx;
-        font-weight: bold;
 
         border-radius: 16rpx;
       }
@@ -148,7 +147,6 @@ van-dialog {
 
     .text {
       font-size: 27rpx;
-      font-weight: bold;
     }
 
     .start-btn {
@@ -181,13 +179,15 @@ van-dialog {
       flex-wrap: wrap;
 
       .btn {
-        margin: 28rpx 24rpx;
-        padding: 10rpx 20rpx;
-        background-color: #CADCEF;
+        margin: 16rpx;
+        padding: 12rpx 24rpx;
+        background-color: #D8D8D8;
         border-radius: 8rpx;
 
-        font-size: 34rpx;
-        font-weight: bold;
+        font-size: 32rpx;
+      }
+      .checked {
+        background-color: #CADCEF;
       }
     }
 
@@ -265,7 +265,7 @@ van-dialog {
 
       .text {
         font-size: 36rpx;
-        font-weight: bold;
+        font-weight: normal;
       }
     }
   }
