--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -3,22 +3,27 @@
 
 <view class="content">
   <view class="container-top">
-    <avatar-display avatar="../../assets/square/room.jpg" name="Exermon" />
+    <avatar-display avatar="{{player.avatarUrl}}" name="{{player.name}}" />
   </view>
-  <gold-level-display gold="50000" level="99" expRate="0.2333" />
+  <gold-level-display gold="{{player.gold}}" level="99" expRate="0.2333" />
   <view class="room-name">
     <input class="text" value="摆烂小屋" placeholder="房间名不能为空~"></input>
   </view>
-  <view class="focus-btn" bindtap="onClickStart">
+  <view class="focus-btn" bindtap="onClickShow" data-window="Start">
     <view class="text">专注</view>
   </view>
 </view>
 
-<van-dialog use-slot show="{{ isShowStartConfig }}" showConfirmButton="{{false}}" bind:close="onClickHide" close-on-click-overlay data-windowName="start">
+<van-dialog use-slot show="{{ isShowStartConfig }}"
+            show-confirm-button="{{false}}"
+            bind:close="onClickHide"
+            close-on-click-overlay
+            data-window="Start">
   <view class="start-config">
     <view class="start-config-top">
       <image class="top-img" src="/assets/main/desc.png" mode="heightFix"></image>
-      <image class="top-img" src="/assets/main/close.png" mode="heightFix" bindtap="onClickHide" data-windowName="start"></image>
+      <image class="top-img" src="/assets/main/close.png" mode="heightFix"
+             bindtap="onClickHide" data-window="Start"></image>
     </view>
     <image class="clock-img" src="/assets/main/clock.png" mode="widthFix">
     </image>
@@ -30,7 +35,8 @@
     </view>
     <view class="content">
       <view class="desc">专注内容</view>
-      <view class="btn" bindtap="onClickSelector">沉迷学习</view>
+      <view class="btn" bindtap="onClickShow"
+            data-window="Selector">沉迷学习</view>
     </view>
     <view class="mode-set">
       <view class="mode">基础模式</view>
@@ -42,7 +48,11 @@
   </view>
 </van-dialog>
 
-<van-dialog use-slot show="{{ isShowRoomConfig}}" showConfirmButton="{{false}}" bind:close="onClickHide" close-on-click-overlay data-windowName="room">
+<van-dialog use-slot show="{{ isShowRoomConfig}}"
+            show-confirm-button="{{false}}"
+            bind:close="onClickHide"
+            close-on-click-overlay
+            data-window="Room">
   <view class="room-config">
     <view class="color-block">
       <view class="color-topic">主题色</view>
@@ -63,12 +73,17 @@
   </view>
 </van-dialog>
 
-<van-dialog use-slot show="{{ isShowSelectorConfig }}" showConfirmButton="{{false}}" bind:close="onClickHide" close-on-click-overlay data-windowName="selector">
+<van-dialog use-slot show="{{ isShowSelectorConfig }}"
+            show-confirm-button="{{false}}"
+            bind:close="onClickHide"
+            close-on-click-overlay
+            data-window="Selector">
   <view class="selector-config">
     <view class="content">
       <view class="btn" wx:for="{{selectorList}}">{{item}}</view>
     </view>
-    <view class="selector-btn" bindtap="onClickHide" data-windowName="selector">完成</view>
+    <view class="selector-btn" bindtap="onClickHide"
+          data-window="Selector">完成</view>
   </view>
 </van-dialog>
 
