[Enhancement] 修复代码和优化

--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -186,7 +186,7 @@ van-dialog {
 
         font-size: 32rpx;
       }
-      .checked {
+      .selected {
         background-color: #CADCEF;
       }
     }
