--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -14,7 +14,7 @@
   </view>
 </view>
 
-<van-dialog use-slot show="{{ isShowStartConfig }}"
+<van-dialog use-slot show="{{ isShowStartWindow }}"
             show-confirm-button="{{false}}"
             bind:close="onClickHide"
             close-on-click-overlay
@@ -27,7 +27,8 @@
     </view>
     <image class="clock-img" src="/assets/main/clock.png" mode="widthFix">
     </image>
-    <van-slider value="{{time}}" bind:drag="onDragTime" min="0" max="120" />
+    <van-slider value="{{time}}" bind:drag="onDragTime"
+                min="15" max="120" />
     <view class="time">
       专注时长
       <text>{{time}}</text>
@@ -36,7 +37,7 @@
     <view class="content">
       <view class="desc">专注内容</view>
       <view class="btn" bindtap="onClickShow"
-            data-window="Selector">沉迷学习</view>
+            data-window="Tags">沉迷学习</view>
     </view>
     <view class="mode-set">
       <view class="mode">基础模式</view>
@@ -48,7 +49,7 @@
   </view>
 </van-dialog>
 
-<van-dialog use-slot show="{{ isShowRoomConfig}}"
+<van-dialog use-slot show="{{ isShowRoomWindow }}"
             show-confirm-button="{{false}}"
             bind:close="onClickHide"
             close-on-click-overlay
@@ -73,17 +74,19 @@
   </view>
 </van-dialog>
 
-<van-dialog use-slot show="{{ isShowSelectorConfig }}"
+<van-dialog use-slot show="{{ isShowTagsWindow }}"
             show-confirm-button="{{false}}"
             bind:close="onClickHide"
             close-on-click-overlay
-            data-window="Selector">
+            data-window="Tags">
   <view class="selector-config">
     <view class="content">
-      <view class="btn" wx:for="{{selectorList}}">{{item}}</view>
+      <view wx:for="{{focusTags}}"
+            class="btn {{focus.tagIdx == index ? 'selected' : ''}}"
+            bind:tap="onTagTab" data-index="{{index}}">{{item}}</view>
     </view>
     <view class="selector-btn" bindtap="onClickHide"
-          data-window="Selector">完成</view>
+          data-window="Tags">完成</view>
   </view>
 </van-dialog>
 
