--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -143,6 +143,9 @@ van-dialog {
 
         border-radius: 16rpx;
       }
+      .selected {
+        background-color: #C0A0C7;
+      }
     }
 
     .text {
