--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -16,8 +16,12 @@
       </view>
       <text class="rest-time">{{runtimeFocus.restTime}}</text>
     </view>
-    <image src="../../assets/main/shop.png" class="toShop" mode="aspectFit" wx:if="{{!runtimeFocus}}" bindtap="tapToShop"></image>
-    <image src="../../assets/main/setting.png" class="toSetting" wx:if="{{!runtimeFocus}}" mode="aspectFit" ></image>
+    <image wx:if="{{!runtimeFocus}}" class="toShop"
+           src="../../assets/main/shop.png" mode="aspectFit"
+           bind:tap="onShopTap"/>
+    <image wx:if="{{!runtimeFocus}}" class="toSetting"
+           src="../../assets/main/setting.png" mode="aspectFit"
+           bind:tap="onClickShow" data-window="Room"/>
     <view wx:if="{{!runtimeFocus}}" class="focus-btn"
           bindtap="onClickShow" data-window="Start">
       <view class="text">专注</view>
@@ -51,10 +55,15 @@
   </view>
 
   <view wx:if="{{runtimeFocus && focus.mode==1}}">
-    <view class="remind" wx:if="{{!isDown}}">
+    <view class="remind" wx:if="{{!isDown && runtimeFocus.invalidCount <= 1}}">
+      <text class="remind-text1">准备好了吗？</text>
+      <text class="remind-text2">反扣手机开始专注！</text>
+      <text class="remind-text3">请在{{runtimeFocus.restInvalidTime}}s内把手机反扣在桌面上</text>
+    </view>
+    <view class="remind" wx:if="{{!isDown && runtimeFocus.invalidCount > 1}}">
       <text class="remind-text1">累了吗？快结束啦！</text>
       <text class="remind-text2">加油坚持住！</text>
-      <text class="remind-text3">请在10s内把手机反扣回桌面</text>
+      <text class="remind-text3">请在{{runtimeFocus.restInvalidTime}}s内把手机反扣回桌面</text>
     </view>
   </view>
 </view>
