--- a/pages/login/login.less
+++ b/pages/login/login.less
@@ -54,12 +54,14 @@
     .tips {
       position: absolute;
 
-      font-size: 3.7vw;
+      font-size: 28rpx;
 
       width: 100vw;
-      bottom: 108rpx;
+      bottom: 120rpx;
 
       transform: translateX(-50%);
+
+      color: grey;
 
       animation: 1s 1s alternate login-button-show both;
     }
@@ -247,7 +249,7 @@
 }
 @keyframes login-button-effect {
   0% { opacity: 1; transform: scale(1) }
-  100% { opacity: 0; transform: scale(1.75) }
+  100% { opacity: 0; transform: scale(2.5) }
 }
 @keyframes login-scale {
   0% { width: 64rpx; height: 64rpx; }
