--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -11,8 +11,9 @@
     <view class="room-info {{runtimeFocus ? 'focusing' : ''}}">
       <text class="top-player-name" wx:if="{{runtimeFocus}}">{{player.name}}'s</text>
       <view class="room-name">
-        <input class="text" maxlength="8"
-               value="{{item.name}}" placeholder="房间名不能为空~"/>
+        <input class="text" maxlength="8" value="{{item.name}}"
+               placeholder="输入房间名~" disabled="{{runtimeFocus}}"
+               bind:blur="onRoomNameBlur"/>
       </view>
       <text class="rest-time">{{runtimeFocus.restTime}}</text>
     </view>
