--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -145,5 +145,37 @@
           data-window="Tags">完成</view>
   </view>
 </van-dialog>
+<van-dialog use-slot show="{{ isShowResultWindow }}"
+            show-confirm-button="{{false}}"
+            bind:close="onClickHide"
+            close-on-click-overlay
+            data-window="Start">
+  <view class="result-config">
+    <view class="result-config-top">
+      <view class="coinGain">
+        <image class="coins" src="/assets/square/gold.png" mode="heightFix" style="height: 88rpx;width: 109rpx;"/>
+        <text>+1200</text>
+      </view>
+      <view class="upgrade">
+        <view class="level">
+        <text>2级</text>
+      </view>
+      <view class="experience">
+      <view class="progress"></view>
+      </view>
+      </view>
+      <view class="tips">
+        <text>距离升级还需xxmin</text>
+      </view>
+      <text class="add">+12</text>
+    </view>
+    <view class="content">
+      <text lines="1" class="result-text1">恭喜你成功完成了</text>
+      <text lines="1" class="mins">120min</text>
+      <text lines="1" class="result-text2">的专注{{'\n'}}途中一定学到了不少吧{{'\n'}}请再接再厉哦～</text>
+    </view>
+    <view class="result-btn" bind:tap="onFinish">完成</view>
+  </view>
+</van-dialog>
 
 <real-tab-bar curPageIndex="0" wx:if="{{!runtimeFocus}}"></real-tab-bar>
