[Enhancement] 完善部分的房间绘制功能

--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -22,7 +22,7 @@
   left: 0; right: 0;
   width: 100vw;
   height: 100vh;
-  background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
+  //background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
   z-index: -100;
 }
 
