--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -409,8 +409,8 @@ van-dialog {
       text-align: center;
     }
     .content {
-      width: 412rpx;
-      height: 121rpx;
+      width: 80%;
+      height: fit-content;
       overflow-wrap: break-word;
       text-align: center;
       font-size: 0rpx;
@@ -440,7 +440,7 @@ van-dialog {
       background-color: #4C7FB3;
       color: white;
       padding: 16rpx 140rpx;
-      margin: 40rpx 32rpx;
+      margin: 32rpx;
       border-radius: 8rpx;
     }
   }
