--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -149,7 +149,7 @@
             show-confirm-button="{{false}}"
             bind:close="onClickHide"
             close-on-click-overlay
-            data-window="Start">
+            data-window="Result">
   <view class="result-config">
     <view class="result-config-top">
       <view class="coinGain">
@@ -174,7 +174,7 @@
       <text lines="1" class="mins">120min</text>
       <text lines="1" class="result-text2">的专注{{'\n'}}途中一定学到了不少吧{{'\n'}}请再接再厉哦～</text>
     </view>
-    <view class="result-btn" bind:tap="onFinish">完成</view>
+    <view class="result-btn" bind:tap="onClickHide" data-window="Result">完成</view>
   </view>
 </van-dialog>
 
