[Enhancement] 应ç 背景原色

--- a/pages/square/square.wxml
+++ b/pages/square/square.wxml
@@ -1,5 +1,6 @@
 <!--square.wxml-->
-<view class="container" style="{{room.backgroundStyle}}">
+<view class="background" style="background: {{room.backgroundStyle}}"/>
+<view class="container">
   <view class="container-top">
     <avatar-display avatar="{{player.avatarUrl}}" name="{{player.name}}" />
   </view>
