--- a/app.less
+++ b/app.less
@@ -1,9 +1,9 @@
 .background {
-  position: absolute;
-  left: 0; right: 0;
+  position: fixed;
+  top: 0; left: 0;
   width: 100vw;
   height: 100vh;
-  background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
+  //background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
 
   z-index: -100;
 }
