--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,4 +1,4 @@
-<view class="background"/>
+<view class="background" style="background: {{room.backgroundStyle}}"/>
 <view class="content">
  <view class="page">
    <view class="player-info">
